--- a/banxe/banxe.html
+++ b/banxe/banxe.html
@@ -25,10 +25,10 @@
                         </div>
                     </li>
                     <li><a href="../banxe/banxe.html">Bán Xe</a></li>
-                    <li><a href="./giỏ hàng/giohang.html">Giỏ Hàng</a></li>
+                    <li><a href="../giỏ hàng/giohang.html">Giỏ Hàng</a></li>
                     <li><a href="#">Liên Hệ</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn" id="dropdown-account">Tài Khoản</a>
+                        <a href="../login/index.html" class="dropbtn" id="dropdown-account">Tài Khoản</a>
                         <div class="dropdown-content">
                             <a href="./login/index.html">Đăng Nhập</a>
                             <a href="./login/index-2.html">Đăng Ký</a>
