--- a/giỏ hàng/giohang.html
+++ b/giỏ hàng/giohang.html
@@ -118,11 +118,11 @@
                             <a href="#">Toyota</a>
                         </div>
                     </li>
-                    <li><a href="#">Bán Xe</a></li>
+                    <li><a href="../banxe/banxe.html">Bán Xe</a></li>
                     <li><a href="cart.html">Giỏ Hàng</a></li>
                     <li><a href="#">Liên Hệ</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn">Tài Khoản</a>
+                        <a href="../login/index.html" class="dropbtn">Tài Khoản</a>
                         <div class="dropdown-content">
                             <a href="./login/index.html">Đăng Nhập</a>
                             <a href="./login/index-2.html">Đăng Ký</a>
