--- a/trangbanxebmw/bmw.html
+++ b/trangbanxebmw/bmw.html
@@ -371,7 +371,7 @@
         localStorage.removeItem('userEmail');
         updateUserUI();
         alert('Đã đăng xuất');
-        window.location.href = './index.html';
+        window.location.href = '../index.html';
     });
 
     // Placeholder login function for demonstration
