--- a/trangbanxeford/ford.html
+++ b/trangbanxeford/ford.html
@@ -372,7 +372,7 @@
         localStorage.removeItem('userEmail');
         updateUserUI();
         alert('Đã đăng xuất');
-        window.location.href = './index.html';
+        window.location.href = '../index.html';
     });
 
     // Placeholder login function for demonstration
